--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -34,6 +34,7 @@
       <groupId>com.thaiopensource</groupId>
       <artifactId>jing</artifactId>
       <version>20091111</version>
+      <optional>true</optional>
       <exclusions>
         <exclusion>
           <groupId>net.sf.saxon</groupId>
@@ -49,11 +50,13 @@
       <groupId>org.ccil.cowan.tagsoup</groupId>
       <artifactId>tagsoup</artifactId>
       <version>1.2.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
-        <groupId>nu.validator.htmlparser</groupId>
-        <artifactId>htmlparser</artifactId>
-        <version>1.3.1</version>
+      <groupId>nu.validator.htmlparser</groupId>
+      <artifactId>htmlparser</artifactId>
+      <version>1.3.1</version>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
@@ -113,7 +116,7 @@
                   </fileset>
                   <mapper type="regexp" from="^ndw-[^/]*/(.*)" to="\1"/>
                 </move>
-                <copy file="${basedir}/src/main/bnd/calabash.bnd" todir="${project.build.directory}/src/osgi"/>
+                <copy file="${basedir}/src/main/bnd/calabash.bnd" todir="${project.build.directory}/src/osgi" overwrite="true"/>
                 <ant dir="${project.build.directory}/src" target="jar"/>
               </target>
             </configuration>
