--- a/isorelax/pom.xml
+++ b/isorelax/pom.xml
@@ -1,46 +1,53 @@
-<?xml version="1.0"?>
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <groupId>org.daisy.example.libs</groupId>
-    <artifactId>isorelax-osgi</artifactId>
-    <version>20050913.0.0</version>
-    <packaging>bundle</packaging>
+  <modelVersion>4.0.0</modelVersion>
 
-    <name>IsoRelax OSGi Bundle</name>
-    <description>Wraps IsoRelax as an OSGi bundle</description>
-    
-    <dependencies>
-      <dependency>
-          <groupId>isorelax</groupId>
-          <artifactId>isorelax</artifactId>
-          <version>20030108</version>
-      </dependency>
-    </dependencies>
+  <parent>
+    <groupId>org.daisy</groupId>
+    <artifactId>daisy</artifactId>
+    <version>1</version>
+    <relativePath/>
+  </parent>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <archive>
-                      <addMavenDescriptor>false</addMavenDescriptor>
-                    </archive>
-                    <instructions>
-                        <Bundle-SymbolicName>isorelax</Bundle-SymbolicName>
-                        <Export-Package>org.iso_relax.*,jp.gr.*</Export-Package>
-                        <Import-Package>org.apache.tools.ant.*;resolution:=optional,jp.co.*;resolution:=optional,*</Import-Package>
-                        <Embed-Dependency>*;inline=true</Embed-Dependency>
-                        <_removeheaders>Built-By,Bnd-LastModified,Embed-Dependency,Include-Resource</_removeheaders>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <groupId>org.daisy.example.libs</groupId>
+  <artifactId>isorelax-osgi</artifactId>
+  <version>20050913.0.0</version>
+  <packaging>bundle</packaging>
+
+  <name>ISO Relax (OSGi bundle)</name>
+  <description>An OSGi bundle for ISO Relax</description>
+  <url>http://iso-relax.sourceforge.net/</url>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.html</url>
+    </license>
+  </licenses>
+
+  <dependencies>
+    <dependency>
+      <groupId>isorelax</groupId>
+      <artifactId>isorelax</artifactId>
+      <version>20030108</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <configuration>
+          <instructions>
+            <Bundle-SymbolicName>isorelax</Bundle-SymbolicName>
+            <Export-Package>org.iso_relax.*,jp.gr.*</Export-Package>
+            <Import-Package>org.apache.tools.ant.*;resolution:=optional,jp.co.*;resolution:=optional,*</Import-Package>
+            <Embed-Dependency>*;inline=true</Embed-Dependency>
+            <_removeheaders>Built-By,Bnd-LastModified,Embed-Dependency,Include-Resource</_removeheaders>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
