--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -1,17 +1,22 @@
-<?xml version="1.0"?>
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <groupId>org.daisy.example.libs</groupId>
-    <artifactId>jing-osgi</artifactId>
-    <version>20091111.0.0</version>
-    <packaging>bundle</packaging>
+  <modelVersion>4.0.0</modelVersion>
 
-  <name>jing-trang OSGi bundle</name>
-  <description>OSGi Bundle for Jing/Trang - tools for validating and translating RelaxNG</description>
+  <parent>
+    <groupId>org.daisy</groupId>
+    <artifactId>daisy</artifactId>
+    <version>1</version>
+    <relativePath/>
+  </parent>
+
+  <groupId>org.daisy.example.libs</groupId>
+  <artifactId>jing-osgi</artifactId>
+  <version>20091111.0.0</version>
+  <packaging>bundle</packaging>
+
+  <name>Jing (OSGi bundle)</name>
+  <description>An OSGi Bundle for Jing - tools for validating and translating RelaxNG</description>
   <url>http://code.google.com/p/jing-trang</url>
   <licenses>
     <license>
@@ -23,23 +28,24 @@
     <connection>http://jing-trang.googlecode.com/svn/trunk/</connection>
     <url>http://code.google.com/p/jing-trang/source/browse/</url>
   </scm>
-    <developers>
-        <developer>
-            <id>jclark</id>
-            <name>James Clark</name>
-            <email>jjc@jclark.com</email>
-            <roles>
-                <role>developer</role>
-            </roles>
-        </developer>
-    </developers>
-    <dependencies>
-      <dependency>
-        <groupId>com.thaiopensource</groupId>
-        <artifactId>jing</artifactId>
-        <version>20091111</version>
-      </dependency>
-      <!-- <dependency>
+  <developers>
+    <developer>
+      <id>jclark</id>
+      <name>James Clark</name>
+      <email>jjc@jclark.com</email>
+      <roles>
+        <role>developer</role>
+      </roles>
+    </developer>
+  </developers>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.thaiopensource</groupId>
+      <artifactId>jing</artifactId>
+      <version>20091111</version>
+    </dependency>
+    <!-- <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
         <version>2.9.1</version>
@@ -80,47 +86,36 @@
         <version>2.7.1</version>
         <optional>true</optional>
       </dependency> -->
-    </dependencies>
-    
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <archive>
-                      <addMavenDescriptor>false</addMavenDescriptor>
-                    </archive>
-                    <instructions>
-                        <Bundle-SymbolicName>com.thaiopensource.jing</Bundle-SymbolicName>
-                        <Export-Package>org.relaxng.datatype,
-                                        org.relaxng.datatype.helpers,
-                                        com.thaiopensource.*
-                                        <!-- com.thaiopensource.util,
-                                        com.thaiopensource.validate.*,
-                                        com.thaiopensource.xml.sax -->
-                        </Export-Package>
-                        <Import-Package>com.icl.saxon;resolution:=optional,
-                                        net.sf.saxon;resolution:=optional,
-                                        org.apache.tools.ant.*;resolution:=optional,
-                                        org.apache.xalan.*;resolution:=optional,
-                                        org.apache.xerces.*;resolution:=optional,
-                                        org.apache.xml.resolver.*;resolution:=optional,
-                                        org.apache.tools.ant.*;resolution:=optional,
-                                        org.iso_relax.*;resolution:=optional,
-                                        *                                        
-                        </Import-Package>
-                        <Embed-Dependency>*;inline=true</Embed-Dependency>
-                        <_removeheaders>Built-By,Bnd-LastModified,Embed-Dependency,Include-Resource</_removeheaders>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <configuration>
+          <instructions>
+            <Bundle-SymbolicName>com.thaiopensource.jing</Bundle-SymbolicName>
+            <Export-Package>org.relaxng.datatype,
+                            org.relaxng.datatype.helpers,
+                            com.thaiopensource.*
+            </Export-Package>
+            <Import-Package>com.icl.saxon;resolution:=optional,
+                            net.sf.saxon;resolution:=optional,
+                            org.apache.tools.ant.*;resolution:=optional,
+                            org.apache.xalan.*;resolution:=optional,
+                            org.apache.xerces.*;resolution:=optional,
+                            org.apache.xml.resolver.*;resolution:=optional,
+                            org.apache.tools.ant.*;resolution:=optional,
+                            org.iso_relax.*;resolution:=optional,
+                            *                                        
+            </Import-Package>
+            <Embed-Dependency>*;inline=true</Embed-Dependency>
+            <_removeheaders>Built-By,Bnd-LastModified,Embed-Dependency,Include-Resource</_removeheaders>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
