--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
-  <name>Framework Parent POM</name>
+
   <groupId>org.daisy.example.libs</groupId>
-  <artifactId>libs-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>libs-aggregator</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-  </properties>
+
+  <name>DAISY Pipeline 2 :: Libraries Aggregator POM</name>
+  <description>Aggregator POM to build all the DAISY Pipeline 2</description>
+
   <modules>
     <module>calabash</module>
     <module>daisy-parent</module>
@@ -23,4 +24,5 @@
     <module>tagsoup</module>
     <module>xerces</module>
   </modules>
+
 </project>
