--- a/saxon/pom.xml
+++ b/saxon/pom.xml
@@ -1,18 +1,34 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
-  <name>Saxon HE OSGi Distribution</name>
+  <parent>
+    <groupId>org.daisy</groupId>
+    <artifactId>daisy</artifactId>
+    <version>1</version>
+    <relativePath/>
+  </parent>
+
   <groupId>org.daisy.example.libs</groupId>
   <artifactId>saxon-he-osgi</artifactId>
   <version>9.4.0</version>
-
   <packaging>bundle</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-  </properties>
+  <name>Saxon HE (OSGi Bundle)</name>
+  <description>An OSGi bundle for Saxon-HE</description>
+  <url>http://www.saxonica.com/</url>
+  <organization>
+    <name>Saxonica</name>
+    <url>http://www.saxonica.com</url>
+  </organization>
+  <licenses>
+    <license>
+      <name>Mozilla Public License Version 1.0</name>
+      <url>http://www.mozilla.org/MPL/1.0/</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <dependencies>
     <dependency>
@@ -27,12 +43,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.3.7</version>
-        <extensions>true</extensions>
         <configuration>
-          <archive>
-            <addMavenDescriptor>false</addMavenDescriptor>
-          </archive>
           <instructions>
             <Bundle-Name>${project.name}</Bundle-Name>
             <Project-Name>${project.name}</Project-Name>
