--- a/htmlparser/pom.xml
+++ b/htmlparser/pom.xml
@@ -9,13 +9,11 @@
     <version>1</version>
   </parent>
 
-  <!-- Maven coordinates -->
-  <groupId>nu.validator.htmlparser</groupId>
+  <groupId>org.daisy.libs</groupId>
   <artifactId>htmlparser</artifactId>
-  <version>1.3.1</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
-  <!-- Metadata -->
   <name>Validator.nu HTML Parser</name>
   <description>The Validator.nu HTML Parser is an implementation of the HTML5 parsing algorithm in Java for applications that do not run scripts. The parser is designed to work as a drop-in replacement for the XML parser in applications that already support XHTML 1.x content with an XML parser and use SAX, DOM or XOM to interface with the parser.</description>
   <url>http://about.validator.nu/htmlparser/</url>
