--- a/http-client/pom.xml
+++ b/http-client/pom.xml
@@ -10,9 +10,9 @@
     <relativePath/>
   </parent>
 
-  <groupId>org.daisy.example.libs</groupId>
-  <artifactId>commons-httpclient-osgi</artifactId>
-  <version>3.1.0</version>
+  <groupId>org.daisy.libs</groupId>
+  <artifactId>commons-httpclient</artifactId>
+  <version>3.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Apache Commons HTTP Client (OSGi bundle)</name>
