--- a/isorelax/pom.xml
+++ b/isorelax/pom.xml
@@ -10,9 +10,9 @@
     <relativePath/>
   </parent>
 
-  <groupId>org.daisy.example.libs</groupId>
-  <artifactId>isorelax-osgi</artifactId>
-  <version>20050913.0.0</version>
+  <groupId>org.daisy.libs</groupId>
+  <artifactId>isorelax</artifactId>
+  <version>20050913.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>ISO Relax (OSGi bundle)</name>
