--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.daisy.example.libs</groupId>
+  <groupId>org.daisy.libs</groupId>
   <artifactId>libs-aggregator</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -13,12 +13,10 @@
 
   <modules>
     <module>calabash</module>
-    <module>daisy-parent</module>
     <module>htmlparser</module>
     <module>http-client</module>
     <module>isorelax</module>
     <module>jing</module>
-    <module>modules-build-helper</module>
     <module>saxon</module>
     <module>servlet-api</module>
     <module>tagsoup</module>
