--- a/servlet-api/pom.xml
+++ b/servlet-api/pom.xml
@@ -10,9 +10,9 @@
     <relativePath/>
   </parent>
 
-  <groupId>org.daisy.example.libs</groupId>
-  <artifactId>servlet-api-osgi</artifactId>
-  <version>2.5.0</version>
+  <groupId>org.daisy.libs</groupId>
+  <artifactId>servlet-api</artifactId>
+  <version>2.5.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>JavaServlet(TM) Specification (OSGi Bundle)</name>
