--- a/xerces/pom.xml
+++ b/xerces/pom.xml
@@ -10,9 +10,9 @@
     <relativePath/>
   </parent>
 
-  <groupId>org.daisy.example.libs</groupId>
-  <artifactId>xerces-osgi</artifactId>
-  <version>2.10.0</version>
+  <groupId>org.daisy.libs</groupId>
+  <artifactId>xercesImpl</artifactId>
+  <version>2.10.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Xerces-J (OSGi bundle)</name>
